edition = "2023";
package heph.plugin.v1;
import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_HYBRID;

message TargetRef {
  string package = 1;
  string name = 2;
  map<string, string> args = 4;
}

message TargetRefWithOutput {
  string package = 1;
  string name = 2;
  map<string, string> args = 3;
  string output = 4;
  repeated string filters = 5;
}
